global-forms.45.scss
/*
	global form styles
    NB: named global-forms.45.scss to allow for project-specific overrides to these styles (see UI/Source/GeneralStyle/forms.50.scss)
*/

// standard chevron icon (used on restyled select dropdown controls)
$dropdown_svg: 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="101" height="34"><path d="M28.989 34c-1.1 0-2.1-.4-2.9-1.2l-25-26C.389 6-.011 5-.011 4c0-1.1.4-2.1 1.2-2.9 1.6-1.5 4.1-1.5 5.7.1l22.1 23 22.1-23c1.5-1.6 4.1-1.6 5.7-.1 1.6 1.5 1.6 4.1.1 5.7l-25 26c-.8.8-1.8 1.2-2.9 1.2z" fill="%23000000"/></svg>';

@mixin input_field_placeholder() {
    /* NB: placeholder only supports the following properties:
        font properties
        color
        background properties
        word-spacing
        letter-spacing
        text-decoration
        vertical-align
        text-transform
        line-height
        text-indent
        opacity
    */
    color: $ss_form_field_placeholder !important;
    font-weight: $ss_form_field_placeholder_weight;
    font-style: $ss_form_field_placeholder_style;
}

@mixin input_field_styling($font_size: $ss_form_field_font_size) {
    @include font_size($font_size);
    @include padding($ss_form_field_padding_y, $ss_form_field_padding_x);
    @include border_radius($ss_form_field_border_radius);
    background-color: $ss_form_field_bg;
    color: $ss_form_field_fg;
    border: $ss_form_field_border;
    font-family: $ss_form_field_font_family;
    font-weight: $ss_form_field_font_weight;
    height: auto;
    //transition: all 0.2s ease-in-out;
    &:hover {
    }

    &:focus {
    }

    &:placeholder-shown {
        // for styling whenever placeholder is visible
    }

    &::placeholder {
        @include input_field_placeholder();
    }

    &::-webkit-input-placeholder {
        @include input_field_placeholder();
    }

    &::-moz-placeholder {
        @include input_field_placeholder();
        // TODO: test Firefox doesn't automatically override opacity level
        // opacity: 1;
    }

    &:-ms-input-placeholder {
        @include input_field_placeholder();
    }

    &::-ms-input-placeholder {
        @include input_field_placeholder();
    }

    &:-moz-placeholder {
        @include input_field_placeholder();
    }
}

fieldset {

    legend {

    }

}

//html:not(.admin),
//html.admin.fullscreen-preview {
    label,
    .field-label {
        @include font_size($ss_form_field_label_font_size);
        color: $ss_form_field_label;
        font-weight: $ss_form_field_label_font_weight;

        &:not(.custom-control-label) {
            margin-bottom: .5rem;
        }

        &:not(.label-important):not(.custom-control-label) {
            @if $ss_form_field_label_hidden {
                display: none;
            }
        }
    }
//}

.form-group {
    // see ThirdParty/Input - used when optionally providing an icon class
    .input-wrapper {
        display: flex;
        align-items: center;

        input + i {
            @include font_size($ss_form_field_icon_size);
            @include margin(0, 0, 0, 16);
            color: $ss_form_field_icon;
        }
    }
}

// specify .form-control to ensure we override Bootstrap classes where necessary
input.form-control {
    // form buttons
    // NB: see global-buttons.35.scss
    /*
&[type='button'],
&[type='reset'],
&[type='submit'] {
}
*/
    // checkboxes
    &[type='checkbox'] {
    }
    // radio buttons
    &[type='radio'] {
    }
    // text entry
    &:not([type]),
    &[type=""],
    &[type='date'],
    &[type='datetime'], // obsolete
    &[type='datetime-local'],
    &[type='email'],
    &[type='month'],
    &[type='number'],
    &[type='password'],
    &[type='search'],
    &[type='tel'],
    &[type='text'],
    &[type='time'],
    &[type='url'],
    &[type='week'] {
        @include input_field_styling;
    }
    // colour picker
    &[type='color'] {
    }
    // file upload
    // NB: see global-buttons.35.scss
    //&[type='file'] {
    //}
    // range
    &[type='range'] {
    }
}

textarea.form-control {
    @include input_field_styling;
}

select.form-control,
.date-time-picker select {
    @include input_field_styling;
    //line-height: 1.3;
    //display: inline-block;
    box-sizing: border-box;
    -moz-appearance: none;
    -webkit-appearance: none;
    appearance: none;
    background-image: url(replace-svg-fill($dropdown_svg, '%23000000', $ss_form_field_icon));
    background-repeat: no-repeat;
    background-position: $ss_form_field_background_position;
    background-size: $ss_form_field_background_size;

    &::-ms-expand {
        display: none;
    }

    option {
        font-weight: normal !important;
    }
}

.white-fields {

    input.form-control {
        // text entry
        &:not([type]),
        &[type=""],
        &[type='date'],
        &[type='datetime'], // obsolete
        &[type='datetime-local'],
        &[type='email'],
        &[type='month'],
        &[type='number'],
        &[type='password'],
        &[type='search'],
        &[type='tel'],
        &[type='text'],
        &[type='time'],
        &[type='url'],
        &[type='week'] {
            background-color: #fff;
        }
    }

    textarea.form-control,
    select.form-control {
        background-color: #fff;
    }
}

html.ios {
    // ensure iOS uses a minimum font size of 16px
    // (otherwise page will zoom in when inputs gain focus)
    input.form-control {
        // checkboxes
        &[type='checkbox'] {
        }
        // radio buttons
        &[type='radio'] {
        }
        // text entry
        &[type='date'],
        &[type='datetime'], // obsolete
        &[type='datetime-local'],
        &[type='email'],
        &[type='month'],
        &[type='number'],
        &[type='password'],
        &[type='search'],
        &[type='tel'],
        &[type='text'],
        &[type='time'],
        &[type='url'],
        &[type='week'] {
            @include font_size(16);
        }
        // colour picker
        &[type='color'] {
        }
        // range
        &[type='range'] {
        }
    }

    textarea.form-control {
        @include font_size(16);
    }

    select.form-control {
        @include font_size(16);
    }
}

